# new_search_engine

./: README.md
MAIN/: .dockerignore
MAIN/search_service/: Dockerfile  README.md  docker-compose.yml  docs.json  import_data.py  main.py  models.py  pyproject.toml
MAIN/search_service/indexdir/: _MAIN_2.toc
MAIN/tests/: .test.db  test_main.py
MAIN/tests/indexdir/: MAIN_e16lr9inn0r7vrx1.seg  _MAIN_2.toc
