[tool.poetry]
name = "search-service"
version = "0.1.0"
description = ""
authors = ["NRomanLee <leeroman680@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"
aiosqlite = "^0.20.0"
whoosh = "^2.7.4"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
